<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPacienteActivity">

    <TextView
        android:id="@+id/tvAdcPaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:text="@string/adicionar_paciente" />

    <TextView
        android:id="@+id/tvObrigatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campos_obrigatorios"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvNomePaciente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/etNomePaciente"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:ems="10"
        android:textSize="15dp"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvTipoSangue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/grupo_sanguineo" />

    <Spinner
        android:id="@+id/spTipoSangue"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/tvLogradouroPac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/logradouro" />

    <EditText
        android:id="@+id/etLogradouroPac"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvNumeroPac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/numero" />

    <EditText
        android:id="@+id/etNumeroPac"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:layout_marginStart="10dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvCidadePac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/cidade" />

    <EditText
        android:id="@+id/etCidadePac"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvUfPac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/uf" />

    <Spinner
        android:id="@+id/spUfPac"
        android:layout_width="match_parent"
        android:layout_height="38dp"/>


    <TextView
        android:id="@+id/tvCelularPac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/celular" />

    <EditText
        android:id="@+id/etCelularPac"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvFixoPac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/fixo" />

    <EditText
        android:id="@+id/etFixoPac"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditarPac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btnExcluirPac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/excluir" />
    </LinearLayout>
</LinearLayout>