<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAdcMedico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:text="@string/adicionar_medico" />

    <TextView
        android:id="@+id/tvObrigatorio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/campos_obrigatorios"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/tvNomeMedico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/etNomeMedico"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvCRM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/crm" />

    <EditText
        android:id="@+id/etCRM"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvLogradouroMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/logradouro" />

    <EditText
        android:id="@+id/etLogradouroMed"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvNumeroMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/numero" />

    <EditText
        android:id="@+id/etNumeroMed"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:layout_marginStart="10dp"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvCidadeMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/cidade" />

    <EditText
        android:id="@+id/etCidadeMed"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvUfMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/uf" />

    <Spinner
        android:id="@+id/spUfMed"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/tvCelularMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/celular" />

    <EditText
        android:id="@+id/etCelularMed"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <TextView
        android:id="@+id/tvFixoMed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/fixo" />

    <EditText
        android:id="@+id/etFixoMed"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:textSize="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="10dp"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnEditarMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btnExcluirMed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/excluir" />
    </LinearLayout>


</LinearLayout>