<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvGerenciamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textSize="30dp"
        android:text="@string/gerenciamento_de_consultas" />

    <TextView
        android:id="@+id/tvEscolha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="10dp"
        android:textSize="20dp"
        android:text="@string/escolha_uma_op" />

    <Spinner
        android:id="@+id/spOpcoesMain"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btn_Adicionar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/adicionar" />

    <Button
        android:id="@+id/btn_Listar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/listar" />
</LinearLayout>